# UPPERCASE_IS_ALL_YOU_NEED

./: .gitignore  .gitmodules  README.md
HUMANEVAL_UPPERCASE/: main.py  pyproject.toml  test_results.json
HUMANEVAL_UPPERCASE/generated_code/normal/HumanEval/: 1.py  10.py  12.py  17.py  5.py  p0.py  p100.py  p102.py  p103.py  p104.py  p105.py  p106.py  p107.py  p108.py  p109.py  p110.py  p111.py  p112.py  p113.py  p114.py  p115.py  p116.py  p117.py  p118.py  p119.py  p121.py  p122.py  p123.py  p124.py  p126.py  p127.py  p128.py  p129.py  p13.py  p130.py  p132.py  p133.py  p136.py  p137.py  p138.py  (+73 more)
HUMANEVAL_UPPERCASE/generated_code/uppercase/HumanEval/: 0.py  10.py  14.py  18.py  19.py  2.py  20.py  21.py  6.py  7.py  p1.py  p100.py  p101.py  p102.py  p103.py  p104.py  p105.py  p106.py  p107.py  p108.py  p109.py  p11.py  p110.py  p111.py  p112.py  p113.py  p114.py  p115.py  p116.py  p117.py  p118.py  p12.py  p120.py  p121.py  p122.py  p123.py  p124.py  p125.py  p127.py  p128.py  (+114 more)
HUMANEVAL_UPPERCASE/humaneval_uppercase/: config.py
HUMANEVAL_UPPERCASE/humaneval_uppercase/llm/: gemini.py  invocation.py  llm_adapter.py
IMAGE_GENERATION/: .gitignore
IMAGE_GENERATION/SCRIPTS/: GENERATE.PY
word_counter/: jailbreak_counter.ipynb  uppercase_on_apps.ipynb
