[project]
name = "humaneval-uppercase"
version = "0.1.0"
description = ""
authors = [
    {name = "khaes-kth",email = "khaes@kth.se"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai (>=1.67.0,<2.0.0)",
    "datasets (>=3.4.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
